# qt-sdl

./: CMakeLists.txt  conanfile.py
Apps/DemoApp/: CMakeLists.txt  MdiWindow.cpp  MdiWindow.h  Program.cpp  SDLChild.cpp  SDLChild.h  app.cpp  app.h
